<resources>
    <string name="app_name">Quiz App</string>
    <string name="title_name">Java quiz for Swathi :D</string>
    <string name="subtitle">Test your junior level knowledge of Java Programming language now !</string>
    <string name="q1">Question 1:</string>
    <string name="q2">Question 2:</string>
    <string name="q3">Question 3:</string>
    <string name="q4">Question 4:</string>
    <string name="q5">Question 5:</string>
    <string name="q6">Question 6:</string>
    <string name="question_one">Which of the following is not a Java keyword ?</string>
    <string name="question_one_answer_one">try</string>
    <string name="question_one_answer_two">abstract</string>
    <string name="question_one_answer_three">well</string>
    <string name="question_one_answer_four">public</string>
    <string name="question_two">If you want your condition to depend upon two conditions BOTH being true,
         What is the proper notation to put between the two booleans ?</string>
    <string name="question_two_answer_one"> &amp;&amp; </string>
    <string name="question_two_answer_two"> || </string>
    <string name="question_two_answer_three"> ! </string>
    <string name="question_two_answer_four"> OR keyword</string>
    <string name="question_three">Choose the appropriate data type for this field: isWalking</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="question_four">Java keywords are written in lowercase as well as uppercase.</string>
    <string name="question_five">Write the appropriate data type for this value: 5.5</string>
    <string name="question_five_hint">Write your answer here</string>
    <string name="question_six">Choose which data types are correct to use in Java ? (2 answers) </string>
    <string name="question_six_answer_one">int</string>
    <string name="question_six_answer_two">Integer</string>
    <string name="question_six_answer_three">echo</string>
    <string name="question_six_answer_four">String</string>
    <string name="score_button">Click for score</string>
    <string name="reset_button">Reset</string>
    <string name="toast0">NOOOB rank :| but … you can try again, right ?!</string>
    <string name="toast1">Still NOOB only %1$d answers but … Try again why don\'t you!</string>
    <string name="toast2">Not too bad, you got %1$d correct answers. I know you can do better. </string>
    <string name="toast3">PRO RANK! You got %1$d correct answers. I declare you the PRO JAVA ENTHUSIAST!</string>

</resources>
