<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/film_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:src="@drawable/java" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FFEB3B" />

        <TextView
            android:id="@+id/app_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_name"
            android:fontFamily="casual"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:fontFamily="casual"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#FF5722" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/q1"
                android:textColor="#FF5252"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="@string/question_one"
                android:fontFamily="casual"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_one" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_two" />
                <RadioButton
                    android:id="@+id/questionOneAnswerThree_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_three" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_one_answer_four" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#FF5252" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_two"
                android:background="#FFEB3B"
                android:fontFamily="casual"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/questionTwoAnswerOne_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_one" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_two" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_three" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_two_answer_four" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#FF5252" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:fontFamily="casual"
                android:text="@string/question_three"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/questionThreeAnswerTrue_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_true" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_false" />
            </RadioGroup>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#FF5252" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:text="@string/question_four"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_true" />
                <RadioButton
                    android:id="@+id/questionFourAnswerFalse_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer_false" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#FF5252" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:fontFamily="casual"
                android:text="@string/question_five"/>
            <EditText
                android:id="@+id/questionFive_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/question_five_hint"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHighlight="#9c27B0"
                android:text="@string/q6"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#FF5252" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:background="#FFEB3B"
                android:text="@string/question_six"/>
            <CheckBox
                android:id="@+id/questionSixAnswerOne_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_one" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_two" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_three" />
            <CheckBox
                android:id="@+id/questionSixAnswerFour_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_six_answer_four" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/submit_answers"
                android:layout_marginTop="50dp"
                android:layout_width="120dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@android:color/holo_blue_bright"
                android:onClick="submitAnswers"
                android:text="@string/score_button" />

            <Button
                android:id="@+id/reset"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_below="@id/submit_answers"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@android:color/holo_red_light"
                android:onClick="reset"
                android:text="@string/reset_button" />

        </RelativeLayout>



    </LinearLayout>

</ScrollView>
